# ecommerce-api

./: .env.example  .gitignore  pyproject.toml
src/ecommerce/: config.py  main.py
tests/: conftest.py
